
10. Change: new, faster identifier search function. [pen enums not modified for this]

11. Fix: constants with enumerated values no longer confused with the enumerated value itself.  (e.g. b : boolean := true; ? true; will show "true" not "b").

12. Split byte code compiler into a separate file, removing it from the scanner.

13. Change: pragma advise, annotate, blocked, clarify, depreciated/deprecated, dispute, propose, refactor, todo now accept static string expressions instead of a string literal. [negative tests needed]

14. New: System.Design_Phase, System.Development_Phase, System.Maintenance_Phase, System.Testing_Phase, reflecting the command line options.

15. New: policy blocks.  static if and static case allowed in policy blocks. [docs needed] [tests needed] [needs to work outside of sparforte_policy]

16. New: policy, configuration are reserved words.

17. Fix (needed): env with AdaScript parameters gives error on semi-colon at end of command.

18. New: Additional command line editing keys: PC keyboard Home (= control-a), End (= control-e), and Del (= new Control-u / ESC x).

19. hash_io (Berkeley DB library added).

20. Fix: Berkeley DB gen_constants script generates dummy values for missing constants.

21. Fix (Terry Droeger): Julian dates finished and working correctly.

22. Fix (Terry Droeger): Argument count (in CGI) calls CGI argument count explicitly.

23. Fix (Terry Droeger): Removed extraneous references to gnat.cgi from two files.  This should fix the CGI POST issues, but both CGI libraries should not be installed at the same time as both read from standard input when they elaborate.

24. New (Terry Droeger): OpenGL can be disabled with --without-opengl.

[David B wants shared library]
