@@ -49,7 +49,8 @@ By default, support is disabled because, once enabled, it requires SparForte
 to only run as a CGI language.  It can be enabled in the configure script
 when building SparForte from sources.</p>
 
-<p>This package is experimental.  It has not been fully tested in SparForte.</p>
+<p>This package is experimental.  It has not been fully tested in SparForte.
+This package is incompatible with the cgi package and pragma import.</p>
 
 <p><u>GCC Ada Equivalent</u>: GNAT.CGI</p>
 
